# aamos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: MultiConfigSetup.cmake  avr-toolchain.cmake
src/: ApplicationMain.cpp  CMakeLists.txt  Scheduler.cpp  Scheduler.hpp  Task.cpp  Task.hpp
test/: CMakeLists.txt  SchedulerTest.cpp  TaskTest.cpp
